correction alignement btn fonction

--- a/Assets/stylehomepage.css
+++ b/Assets/stylehomepage.css
@@ -110,7 +110,7 @@ a {
         position: relative;
     }
 
-    #btn__explore::after{
+    /* #btn__explore::after{
         content: "";
         position: absolute;
         top: 0;
@@ -127,7 +127,7 @@ a {
     }
     #btn__explore:hover::after {
         opacity: 1;
-    }
+    } */
     
     #btn__explore:hover {
         box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.25);  
@@ -173,8 +173,9 @@ a {
     .functioning__filter__btn {
         background-color: var(--background);
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
+        padding-left: 40px;
         gap: 20px;
         border-radius: 20px;
         border: none;
